welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: ambiguous reference to overloaded definition,
both method d in class ZigZag of type ()Unit
and  method d in class ZigZag of type ()Unit
match argument types ()
		if (d())
                    ^ZigZag:17: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:22: error: not found: value g
		if (g())
                    ^ZigZag:26: error: not found: value y
				setPos(x,y+2)
                                         ^ZigZag:42: error: not found: value Direction
	Direction.EST();
        ^ZigZag:47: error: not found: value Direction
	Direction.OUEST();
        ^ZigZag:46: error: method d is defined twice
  conflicting symbols both originated in file 'plm.runtime138.ZigZag'
def d(){
    ^